[gd_scene load_steps=9 format=4 uid="uid://bshmowlempr00"]

[ext_resource type="Script" uid="uid://bweb56xo71oog" path="res://(ui)levels/start_screen.gd" id="1_reu5o"]
[ext_resource type="PackedScene" uid="uid://bqpot1xpmj7ye" path="res://parallax_bakground.tscn" id="1_td5ce"]
[ext_resource type="Script" uid="uid://b6a8lkdkersh7" path="res://parallax_bakground.gd" id="2_xo84u"]
[ext_resource type="PackedScene" uid="uid://c1bkiqsyhlggi" path="res://ui_bakground.tscn" id="3_reu5o"]
[ext_resource type="FontFile" uid="uid://b5p8ip8jo47wf" path="res://fonts/karma-future-font/KarmaFuture.ttf" id="4_xo84u"]
[ext_resource type="FontFile" uid="uid://dk3rtw1w3qmkh" path="res://fonts/hardpixel/Hardpixel.OTF" id="6_0vpym"]
[ext_resource type="PackedScene" uid="uid://d325f5i0nuqbl" path="res://coin_panal.tscn" id="6_7xjm0"]

[sub_resource type="FontVariation" id="FontVariation_reu5o"]

[node name="start_screen" type="Node2D"]
script = ExtResource("1_reu5o")

[node name="Parallax2D" parent="." instance=ExtResource("1_td5ce")]
scroll_offset = Vector2(-703, -211)
script = ExtResource("2_xo84u")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ui_background" parent="Control" instance=ExtResource("3_reu5o")]
tile_map_data = PackedByteArray("AAABAAEAAAAAAAAAAAACAAEAAAABAAAAAAADAAEAAAABAAAAAAAEAAEAAAABAAAAAAAFAAEAAAABAAAAAAABAAIAAAAAAAEAAAABAAMAAAAAAAEAAAABAAQAAAAAAAEAAAABAAUAAAAAAAEAAAABAAYAAAAAAAEAAAABAAcAAAAAAAEAAAACAAIAAAABAAEAAAACAAMAAAABAAEAAAACAAQAAAABAAEAAAACAAUAAAABAAEAAAACAAYAAAABAAEAAAACAAcAAAABAAEAAAABAAgAAAAAAAEAAAABAAkAAAAAAAEAAAABAAoAAAAAAAEAAAABAAsAAAAAAAEAAAABAAwAAAAAAAEAAAACAAwAAAABAAEAAAACAAsAAAABAAEAAAACAAoAAAABAAEAAAACAAkAAAABAAEAAAACAAgAAAABAAEAAAADAAwAAAABAAEAAAAEAAwAAAABAAEAAAAFAAwAAAABAAEAAAAGAAwAAAABAAEAAAAHAAwAAAABAAEAAAAIAAwAAAABAAEAAAAJAAwAAAABAAEAAAAKAAwAAAABAAEAAAALAAwAAAABAAEAAAAMAAwAAAABAAEAAAANAAwAAAABAAEAAAANAAsAAAABAAEAAAAOAAsAAAABAAEAAAAPAAsAAAABAAEAAAAQAAsAAAABAAEAAAAQAAwAAAABAAEAAAAPAAwAAAABAAEAAAAOAAwAAAABAAEAAAARAAwAAAABAAEAAAASAAwAAAABAAEAAAATAAwAAAABAAEAAAATAAsAAAABAAEAAAATAAoAAAABAAEAAAATAAkAAAABAAEAAAATAAgAAAABAAEAAAASAAcAAAABAAEAAAASAAYAAAABAAEAAAASAAUAAAABAAEAAAASAAQAAAABAAEAAAASAAMAAAABAAEAAAASAAIAAAABAAEAAAATAAIAAAABAAEAAAATAAMAAAABAAEAAAATAAQAAAABAAEAAAASAAgAAAABAAEAAAATAAcAAAABAAEAAAATAAYAAAABAAEAAAATAAUAAAABAAEAAAATAAEAAAABAAAAAAASAAEAAAABAAAAAAARAAEAAAABAAAAAAAQAAEAAAABAAAAAAAPAAEAAAABAAAAAAAOAAEAAAABAAAAAAANAAEAAAABAAAAAAAMAAEAAAABAAAAAAALAAEAAAABAAAAAAAKAAEAAAABAAAAAAAJAAEAAAABAAAAAAAIAAEAAAABAAAAAAAHAAEAAAABAAAAAAAGAAEAAAABAAAAAAARAAIAAAABAAEAAAAQAAIAAAABAAEAAAAPAAIAAAABAAEAAAAOAAIAAAABAAEAAAANAAIAAAABAAEAAAAMAAIAAAABAAEAAAALAAIAAAABAAEAAAAKAAIAAAABAAEAAAAJAAIAAAABAAEAAAAIAAIAAAABAAEAAAAHAAIAAAABAAEAAAAGAAIAAAABAAEAAAAFAAIAAAABAAEAAAAEAAIAAAABAAEAAAADAAIAAAABAAEAAAARAAMAAAABAAEAAAARAAQAAAABAAEAAAARAAUAAAABAAEAAAAQAAUAAAABAAEAAAAPAAUAAAABAAEAAAAPAAYAAAABAAEAAAAOAAYAAAABAAEAAAANAAcAAAABAAEAAAAMAAcAAAABAAEAAAALAAcAAAABAAEAAAAKAAcAAAABAAEAAAAJAAcAAAABAAEAAAAMAAYAAAABAAEAAAANAAYAAAABAAEAAAAKAAYAAAABAAEAAAALAAYAAAABAAEAAAAIAAcAAAABAAEAAAAJAAYAAAABAAEAAAAMAAUAAAABAAEAAAANAAUAAAABAAEAAAAOAAQAAAABAAEAAAANAAQAAAABAAEAAAAKAAUAAAABAAEAAAALAAUAAAABAAEAAAAIAAQAAAABAAEAAAAJAAUAAAABAAEAAAAHAAQAAAABAAEAAAAGAAQAAAABAAEAAAAJAAQAAAABAAEAAAALAAQAAAABAAEAAAAKAAQAAAABAAEAAAAMAAMAAAABAAEAAAANAAMAAAABAAEAAAAMAAQAAAABAAEAAAAOAAMAAAABAAEAAAAPAAMAAAABAAEAAAAQAAMAAAABAAEAAAAQAAQAAAABAAEAAAAPAAQAAAABAAEAAAAOAAUAAAABAAEAAAAQAAYAAAABAAEAAAARAAYAAAABAAEAAAARAAcAAAABAAEAAAARAAgAAAABAAEAAAARAAkAAAABAAEAAAASAAkAAAABAAEAAAASAAoAAAABAAEAAAASAAsAAAABAAEAAAARAAsAAAABAAEAAAARAAoAAAABAAEAAAAQAAoAAAABAAEAAAAPAAoAAAABAAEAAAAOAAoAAAABAAEAAAANAAoAAAABAAEAAAAMAAoAAAABAAEAAAALAAoAAAABAAEAAAAKAAoAAAABAAEAAAAJAAoAAAABAAEAAAAIAAoAAAABAAEAAAAHAAoAAAABAAEAAAAGAAoAAAABAAEAAAAFAAoAAAABAAEAAAAEAAoAAAABAAEAAAADAAoAAAABAAEAAAADAAsAAAABAAEAAAAEAAsAAAABAAEAAAAFAAsAAAABAAEAAAAGAAsAAAABAAEAAAAHAAsAAAABAAEAAAAIAAsAAAABAAEAAAAJAAsAAAABAAEAAAAKAAsAAAABAAEAAAALAAsAAAABAAEAAAAMAAsAAAABAAEAAAAQAAkAAAABAAEAAAAQAAgAAAABAAEAAAAQAAcAAAABAAEAAAAPAAcAAAABAAEAAAAOAAcAAAABAAEAAAAOAAgAAAABAAEAAAAPAAgAAAABAAEAAAAPAAkAAAABAAEAAAAOAAkAAAABAAEAAAANAAkAAAABAAEAAAAMAAkAAAABAAEAAAALAAkAAAABAAEAAAAKAAkAAAABAAEAAAAJAAkAAAABAAEAAAAIAAkAAAABAAEAAAAHAAkAAAABAAEAAAAGAAkAAAABAAEAAAAFAAkAAAABAAEAAAAEAAkAAAABAAEAAAADAAkAAAABAAEAAAADAAgAAAABAAEAAAADAAcAAAABAAEAAAADAAYAAAABAAEAAAADAAUAAAABAAEAAAADAAQAAAABAAEAAAADAAMAAAABAAEAAAAEAAMAAAABAAEAAAAFAAMAAAABAAEAAAAGAAMAAAABAAEAAAAHAAMAAAABAAEAAAAIAAMAAAABAAEAAAAJAAMAAAABAAEAAAAKAAMAAAABAAEAAAALAAMAAAABAAEAAAAIAAUAAAABAAEAAAAIAAYAAAABAAEAAAAKAAgAAAABAAEAAAALAAgAAAABAAEAAAAMAAgAAAABAAEAAAANAAgAAAABAAEAAAAJAAgAAAABAAEAAAAIAAgAAAABAAEAAAAHAAgAAAABAAEAAAAGAAgAAAABAAEAAAAFAAgAAAABAAEAAAAEAAgAAAABAAEAAAAEAAcAAAABAAEAAAAEAAYAAAABAAEAAAAEAAUAAAABAAEAAAAEAAQAAAABAAEAAAAFAAQAAAABAAEAAAAGAAUAAAABAAEAAAAFAAUAAAABAAEAAAAFAAYAAAABAAEAAAAFAAcAAAABAAEAAAAGAAcAAAABAAEAAAAHAAcAAAABAAEAAAAHAAYAAAABAAEAAAAGAAYAAAABAAEAAAAHAAUAAAABAAEAAAAUAAEAAAABAAAAAAAVAAEAAAABAAAAAAAWAAEAAAABAAAAAAAXAAEAAAABAAAAAAAYAAEAAAABAAAAAAAZAAEAAAABAAAAAAAaAAEAAAABAAAAAAAbAAEAAAABAAAAAAAcAAEAAAABAAAAAAAdAAEAAAABAAAAAAAeAAEAAAABAAAAAAAfAAEAAAABAAAAAAAgAAEAAAABAAAAAAAhAAEAAAABAAAAAAAiAAEAAAACAAAAAAAiAAIAAAACAAEAAAAiAAMAAAACAAEAAAAiAAQAAAACAAEAAAAiAAUAAAACAAEAAAAiAAYAAAACAAEAAAAiAAcAAAACAAEAAAAhAAcAAAABAAEAAAAhAAgAAAABAAEAAAAhAAkAAAABAAEAAAAhAAoAAAABAAEAAAAiAAoAAAACAAEAAAAiAAsAAAACAAEAAAAiAAwAAAACAAEAAAAiAA0AAAACAAEAAAAiAAgAAAACAAEAAAAiAAkAAAACAAEAAAAhAA0AAAABAAEAAAAhAA4AAAABAAEAAAAiAA4AAAACAAEAAAAiAA8AAAACAAEAAAAhAA8AAAABAAEAAAAhABAAAAABAAEAAAAiABAAAAACAAEAAAAiABEAAAACAAEAAAAiABIAAAACAAIAAAAhABIAAAABAAIAAAAgABIAAAABAAIAAAAfABIAAAABAAIAAAAeABIAAAABAAIAAAAdABIAAAABAAIAAAAcABIAAAABAAIAAAAbABIAAAABAAIAAAAaABIAAAABAAIAAAAZABIAAAABAAIAAAAYABIAAAABAAIAAAAXABIAAAABAAIAAAAWABIAAAABAAIAAAAVABIAAAABAAIAAAAUABIAAAABAAIAAAATABIAAAABAAIAAAASABIAAAABAAIAAAARABIAAAABAAIAAAAQABIAAAABAAIAAAAPABIAAAABAAIAAAAOABIAAAABAAIAAAANABIAAAABAAIAAAAMABIAAAABAAIAAAALABIAAAABAAIAAAAKABIAAAABAAIAAAAJABIAAAABAAIAAAAIABIAAAABAAIAAAAHABIAAAABAAIAAAAGABIAAAABAAIAAAAFABIAAAABAAIAAAAEABIAAAABAAIAAAADABIAAAABAAIAAAACABIAAAABAAIAAAABABIAAAAAAAIAAAABABEAAAAAAAEAAAABABAAAAAAAAEAAAABAA8AAAAAAAEAAAABAA4AAAAAAAEAAAABAA0AAAAAAAEAAAAUAAIAAAABAAEAAAAVAAIAAAABAAEAAAAWAAIAAAABAAEAAAAXAAIAAAABAAEAAAAYAAIAAAABAAEAAAAZAAIAAAABAAEAAAAaAAIAAAABAAEAAAAbAAIAAAABAAEAAAAcAAIAAAABAAEAAAAdAAIAAAABAAEAAAAeAAIAAAABAAEAAAAfAAIAAAABAAEAAAAgAAIAAAABAAEAAAAhAAIAAAABAAEAAAAUAAMAAAABAAEAAAAVAAMAAAABAAEAAAAWAAMAAAABAAEAAAAXAAMAAAABAAEAAAAYAAMAAAABAAEAAAAZAAMAAAABAAEAAAAaAAMAAAABAAEAAAAbAAMAAAABAAEAAAAcAAMAAAABAAEAAAAdAAMAAAABAAEAAAAeAAMAAAABAAEAAAAfAAMAAAABAAEAAAAgAAMAAAABAAEAAAAhAAMAAAABAAEAAAAhAAQAAAABAAEAAAAgAAQAAAABAAEAAAAfAAQAAAABAAEAAAAeAAQAAAABAAEAAAAdAAQAAAABAAEAAAAcAAQAAAABAAEAAAAbAAQAAAABAAEAAAAaAAQAAAABAAEAAAAZAAQAAAABAAEAAAAYAAQAAAABAAEAAAAXAAQAAAABAAEAAAAWAAQAAAABAAEAAAAVAAQAAAABAAEAAAAUAAQAAAABAAEAAAAUAAUAAAABAAEAAAAVAAUAAAABAAEAAAAWAAUAAAABAAEAAAAXAAUAAAABAAEAAAAYAAUAAAABAAEAAAAZAAUAAAABAAEAAAAaAAUAAAABAAEAAAAbAAUAAAABAAEAAAAcAAUAAAABAAEAAAAdAAUAAAABAAEAAAAeAAUAAAABAAEAAAAfAAUAAAABAAEAAAAgAAUAAAABAAEAAAAhAAUAAAABAAEAAAAhAAYAAAABAAEAAAAgAAYAAAABAAEAAAAfAAYAAAABAAEAAAAeAAYAAAABAAEAAAAdAAYAAAABAAEAAAAcAAYAAAABAAEAAAAbAAYAAAABAAEAAAAaAAYAAAABAAEAAAAZAAYAAAABAAEAAAAYAAYAAAABAAEAAAAXAAYAAAABAAEAAAAWAAYAAAABAAEAAAAVAAYAAAABAAEAAAAUAAYAAAABAAEAAAAUAAcAAAABAAEAAAAUAAgAAAABAAEAAAAVAAgAAAABAAEAAAAWAAcAAAABAAEAAAAXAAcAAAABAAEAAAAYAAcAAAABAAEAAAAZAAcAAAABAAEAAAAaAAcAAAABAAEAAAAbAAcAAAABAAEAAAAcAAcAAAABAAEAAAAdAAcAAAABAAEAAAAeAAcAAAABAAEAAAAfAAcAAAABAAEAAAAgAAcAAAABAAEAAAAVAAcAAAABAAEAAAAWAAgAAAABAAEAAAAXAAgAAAABAAEAAAAYAAgAAAABAAEAAAAZAAgAAAABAAEAAAAaAAgAAAABAAEAAAAbAAgAAAABAAEAAAAcAAgAAAABAAEAAAAdAAgAAAABAAEAAAAeAAgAAAABAAEAAAAfAAgAAAABAAEAAAAgAAgAAAABAAEAAAAgAAkAAAABAAEAAAAfAAkAAAABAAEAAAAeAAkAAAABAAEAAAAdAAkAAAABAAEAAAAcAAkAAAABAAEAAAAbAAkAAAABAAEAAAAaAAkAAAABAAEAAAAZAAkAAAABAAEAAAAYAAkAAAABAAEAAAAXAAkAAAABAAEAAAAWAAkAAAABAAEAAAAVAAkAAAABAAEAAAAUAAkAAAABAAEAAAAUAAoAAAABAAEAAAAVAAoAAAABAAEAAAAVAAsAAAABAAEAAAAWAAsAAAABAAEAAAAXAAsAAAABAAEAAAAYAAsAAAABAAEAAAAZAAsAAAABAAEAAAAaAAoAAAABAAEAAAAbAAoAAAABAAEAAAAcAAoAAAABAAEAAAAdAAoAAAABAAEAAAAeAAoAAAABAAEAAAAfAAoAAAABAAEAAAAgAAoAAAABAAEAAAAZAAoAAAABAAEAAAAYAAoAAAABAAEAAAAXAAoAAAABAAEAAAAWAAoAAAABAAEAAAAUAAsAAAABAAEAAAAaAAsAAAABAAEAAAAbAAsAAAABAAEAAAAcAAsAAAABAAEAAAAdAAsAAAABAAEAAAAeAAsAAAABAAEAAAAfAAsAAAABAAEAAAAgAAsAAAABAAEAAAAhAAsAAAABAAEAAAAhAAwAAAABAAEAAAAgAAwAAAABAAEAAAAfAAwAAAABAAEAAAAeAAwAAAABAAEAAAAdAAwAAAABAAEAAAAcAAwAAAABAAEAAAAbAAwAAAABAAEAAAAaAAwAAAABAAEAAAAZAAwAAAABAAEAAAAYAAwAAAABAAEAAAAXAAwAAAABAAEAAAAWAAwAAAABAAEAAAAVAAwAAAABAAEAAAAUAAwAAAABAAEAAAAPAA0AAAABAAEAAAAOAA0AAAABAAEAAAANAA0AAAABAAEAAAAMAA0AAAABAAEAAAALAA0AAAABAAEAAAAKAA0AAAABAAEAAAAJAA0AAAABAAEAAAAIAA0AAAABAAEAAAAHAA0AAAABAAEAAAAGAA0AAAABAAEAAAAFAA0AAAABAAEAAAAEAA0AAAABAAEAAAADAA0AAAABAAEAAAACAA0AAAABAAEAAAACAA4AAAABAAEAAAADAA4AAAABAAEAAAAEAA4AAAABAAEAAAAFAA4AAAABAAEAAAAGAA4AAAABAAEAAAAHAA4AAAABAAEAAAAIAA4AAAABAAEAAAAJAA4AAAABAAEAAAAKAA4AAAABAAEAAAALAA4AAAABAAEAAAAMAA4AAAABAAEAAAANAA4AAAABAAEAAAAOAA4AAAABAAEAAAAPAA4AAAABAAEAAAAQAA4AAAABAAEAAAARAA4AAAABAAEAAAARAA0AAAABAAEAAAAQAA0AAAABAAEAAAASAA0AAAABAAEAAAATAA0AAAABAAEAAAAUAA0AAAABAAEAAAAVAA0AAAABAAEAAAAWAA0AAAABAAEAAAAeAA0AAAABAAEAAAAcAA0AAAABAAEAAAAdAA0AAAABAAEAAAAaAA0AAAABAAEAAAAbAA0AAAABAAEAAAAZAA0AAAABAAEAAAAYAA0AAAABAAEAAAAXAA0AAAABAAEAAAAfAA0AAAABAAEAAAAgAA0AAAABAAEAAAAgAA4AAAABAAEAAAAfAA4AAAABAAEAAAAeAA4AAAABAAEAAAAdAA4AAAABAAEAAAAcAA4AAAABAAEAAAAbAA4AAAABAAEAAAAaAA4AAAABAAEAAAAZAA4AAAABAAEAAAAYAA4AAAABAAEAAAAXAA4AAAABAAEAAAAWAA4AAAABAAEAAAAVAA4AAAABAAEAAAAUAA4AAAABAAEAAAAUAA8AAAABAAEAAAATAA8AAAABAAEAAAATAA4AAAABAAEAAAASAA4AAAABAAEAAAAQAA8AAAABAAEAAAAPAA8AAAABAAEAAAAOAA8AAAABAAEAAAANAA8AAAABAAEAAAAMAA8AAAABAAEAAAALAA8AAAABAAEAAAAKAA8AAAABAAEAAAAJAA8AAAABAAEAAAAIAA8AAAABAAEAAAAHAA8AAAABAAEAAAAGAA8AAAABAAEAAAAFAA8AAAABAAEAAAAEAA8AAAABAAEAAAADAA8AAAABAAEAAAACAA8AAAABAAEAAAACABAAAAABAAEAAAADABAAAAABAAEAAAAEABAAAAABAAEAAAAFABAAAAABAAEAAAAGABAAAAABAAEAAAAHABAAAAABAAEAAAAIABAAAAABAAEAAAAJABAAAAABAAEAAAAKABAAAAABAAEAAAALABAAAAABAAEAAAAMABAAAAABAAEAAAANABAAAAABAAEAAAACABEAAAABAAEAAAADABEAAAABAAEAAAAEABEAAAABAAEAAAAFABEAAAABAAEAAAAGABEAAAABAAEAAAAHABEAAAABAAEAAAAIABEAAAABAAEAAAAJABEAAAABAAEAAAAKABEAAAABAAEAAAALABEAAAABAAEAAAAMABEAAAABAAEAAAANABEAAAABAAEAAAAOABEAAAABAAEAAAAPABEAAAABAAEAAAAQABEAAAABAAEAAAARABEAAAABAAEAAAASABEAAAABAAEAAAATABEAAAABAAEAAAAUABEAAAABAAEAAAAVABEAAAABAAEAAAAWABEAAAABAAEAAAAXABEAAAABAAEAAAAYABEAAAABAAEAAAAZABEAAAABAAEAAAAaABEAAAABAAEAAAAbABEAAAABAAEAAAAcABEAAAABAAEAAAAdABEAAAABAAEAAAAeABEAAAABAAEAAAAfABEAAAABAAEAAAAgABEAAAABAAEAAAAhABEAAAABAAEAAAAgABAAAAABAAEAAAAfABAAAAABAAEAAAAeABAAAAABAAEAAAAdABAAAAABAAEAAAAcABAAAAABAAEAAAAbABAAAAABAAEAAAAaABAAAAABAAEAAAAZABAAAAABAAEAAAAYABAAAAABAAEAAAAXABAAAAABAAEAAAAWABAAAAABAAEAAAAPABAAAAABAAEAAAAOABAAAAABAAEAAAAQABAAAAABAAEAAAARABAAAAABAAEAAAASABAAAAABAAEAAAATABAAAAABAAEAAAAUABAAAAABAAEAAAAVABAAAAABAAEAAAARAA8AAAABAAEAAAASAA8AAAABAAEAAAAVAA8AAAABAAEAAAAWAA8AAAABAAEAAAAXAA8AAAABAAEAAAAYAA8AAAABAAEAAAAZAA8AAAABAAEAAAAaAA8AAAABAAEAAAAbAA8AAAABAAEAAAAcAA8AAAABAAEAAAAdAA8AAAABAAEAAAAgAA8AAAABAAEAAAAfAA8AAAABAAEAAAAeAA8AAAABAAEAAAA=")

[node name="Park Runner" type="Label" parent="Control"]
layout_mode = 0
offset_left = 190.0
offset_top = 41.0
offset_right = 978.0
offset_bottom = 206.0
tooltip_text = "Start in your current level"
theme_override_colors/font_color = Color(0.39, 0.29874, 0.2379, 1)
theme_override_fonts/font = ExtResource("4_xo84u")
theme_override_font_sizes/font_size = 126
text = "Park Runner"

[node name="version" type="Label" parent="Control"]
layout_mode = 0
offset_left = 959.0
offset_top = 546.0
offset_right = 1098.0
offset_bottom = 601.0
theme_override_colors/font_color = Color(0.3882353, 0.29803923, 0.23921569, 1)
theme_override_fonts/font = SubResource("FontVariation_reu5o")
theme_override_font_sizes/font_size = 32
text = "version"
horizontal_alignment = 2

[node name="fun_text" type="Label" parent="Control"]
layout_mode = 0
offset_left = 875.0
offset_top = 207.99997
offset_right = 1093.0
offset_bottom = 252.99997
rotation = -0.57142335
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "don't copy UIs"

[node name="Play_button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 400.0
offset_top = 278.0
offset_right = 765.0
offset_bottom = 338.0
theme_override_fonts/font = ExtResource("6_0vpym")
theme_override_font_sizes/font_size = 20
text = "Play"

[node name="select_level_button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 399.0
offset_top = 355.0
offset_right = 765.0
offset_bottom = 415.0
theme_override_fonts/font = ExtResource("6_0vpym")
theme_override_font_sizes/font_size = 20
text = "Select Level"

[node name="change_caracter" type="Button" parent="Control"]
layout_mode = 0
offset_left = 400.0
offset_top = 432.0
offset_right = 765.0
offset_bottom = 492.0
theme_override_fonts/font = ExtResource("6_0vpym")
theme_override_font_sizes/font_size = 20
text = "Change carecter (Coming soon)"

[node name="coin_panal" parent="Control" instance=ExtResource("6_7xjm0")]
layout_mode = 1
offset_left = 84.0
offset_top = 559.0
offset_right = 44.0
offset_bottom = 519.0

[connection signal="button_down" from="Control/Play_button" to="." method="_on_play_button_button_down"]
[connection signal="button_down" from="Control/select_level_button" to="." method="_on_select_level_button_button_down"]
